--- a/Phim/app/src/main/AndroidManifest.xml
+++ b/Phim/app/src/main/AndroidManifest.xml
@@ -9,16 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CategoriaActivity" />
-        <activity android:name=".Main2Activity" />
-        <activity android:name=".SplashActivity"></activity>
+        <activity android:name="com.example.view.CategoriaActivity" />
+        <activity android:name="com.example.view.Main2Activity" />
+        <activity android:name="com.example.view.SplashActivity"></activity>
     </application>
 
 </manifest>
