--- a/Phimy/app/src/main/AndroidManifest.xml
+++ b/Phimy/app/src/main/AndroidManifest.xml
@@ -41,17 +41,15 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity android:name=".view.InicioActivity">
-        <meta-data
-            android:name="android.app.searchable"
-            android:resource="@xml/searchable" />
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
 
-        <intent-filter>
-            <action android:name="android.intent.action.SEARCH" />
-        </intent-filter>
-
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
         </activity>
         <activity android:name=".view.MovieDetalleActivity" />
         <activity android:name=".view.MediaActivity" />
@@ -64,7 +62,8 @@
             android:label="@string/title_activity_phimy_preference"
             android:theme="@style/SplashTheme" />
         <activity android:name=".view.SettingActivity" />
-        <activity android:name=".view.MainActivity"></activity>
+        <activity android:name=".view.MainActivity" />
+        <activity android:name=".view.SeriesDetalleActivity"></activity>
     </application>
 
 </manifest>
